<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_txt"
        app:titleTextColor="#FFFCFC" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="122dp"
        android:layout_height="132dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toStartOf="@id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSolde"
        app:srcCompat="@drawable/charbon" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="122dp"
        android:layout_height="132dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@id/textViewSolde"
        app:srcCompat="@drawable/diamant" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="122dp"
        android:layout_height="132dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imageView2"
        app:layout_constraintTop_toBottomOf="@id/textViewSolde"
        app:srcCompat="@drawable/emeraude" />

    <RadioGroup
        android:id="@+id/radioGroupMise"
        android:layout_width="75dp"
        android:layout_height="141dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/txt1"
        app:layout_constraintEnd_toStartOf="@id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount1"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="427dp" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount2"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="379dp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount5"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="475dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewSolde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="218dp"
        android:layout_height="97dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#6C6B6B"
        android:text="@string/JOUER"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/radioGroupMise"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cass"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/ajout100"
        android:textColor="#ED6C6B6B"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/textV2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupMise" />

    <TextView
        android:id="@+id/textV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="56dp"
        android:text="@string/entr_vtr"
        android:textColor="#888585"
        android:textSize="30sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/editTextText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1"
        app:layout_constraintVertical_bias="0.833" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="56dp"
        android:contentDescription="@string/secret"
        android:ems="3"
        android:inputType="text|textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toEndOf="@+id/textV2"
        app:layout_constraintTop_toBottomOf="@+id/checkBox"
        app:layout_constraintVertical_bias="0.962" />


</androidx.constraintlayout.widget.ConstraintLayout>